# libSTARK

./: CMakeLists.txt  README.md  build.sh  build_emscripten.sh  compile_flags.txt  link_flags.txt  put_arguments.py
_googletest/: CMakeLists.txt  CMakeLists.txt.in
algebra/FFT/: CMakeLists.txt
algebra/FFT/src/: Definitions.cpp  Definitions.h  Element.cpp  FFT.cpp  Polynomials.cpp  clmul.cpp  simd-functions.cpp
algebra/algebralib/: CMakeLists.txt
algebra/algebralib-tests/: CMakeLists.txt  FFT_UTEST.cpp  FieldElement_UTEST.cpp  main.cpp
algebra/algebralib/headers/algebraLib/: AffinePolynomial.hpp  BitExtract.hpp  CircuitPolynomial.hpp  FFT.hpp  FieldElement.hpp  MappingsSys.hpp  PolynomialInterface.hpp  SelectorSum.hpp  UnivariatePolynomialGeneral.hpp  novelFFT.hpp  variable.hpp
algebra/algebralib/src/: AffinePolynomial.cpp  BitExtract.cpp  CircuitPolynomial.cpp  ErrorHandling.cpp  FFT.cpp  FieldElement.cpp  MappingsSys.cpp  SelectorSum.cpp  UnivariatePolynomialGeneral.cpp  novelFFT.cpp
dd_script/: create_tinyram_code.py  mtf_runc.py  result_table.py  storage.csv  test_db_script.py  test_script.py  test_string_work.py
libstark/: CMakeLists.txt
libstark-tests/: AcspWitnessChecker_UTEST.cpp  BairWitnessChecker_UTEST.cpp  CMakeLists.txt  MerkleCommitment_UTEST.cpp
libstark-tests/BairToAcsp/: RoutingNetworks_UTEST.cpp  constraints_UTEST.cpp  neighborsConstructor_UTEST.cpp  witnessReduction_UTEST.cpp
libstark-tests/lightCircLib/: lightCircGate.cpp  lightCircPoly.cpp  lightCircPoly.hpp  lightCircPoly_UTEST.cpp  lightCircuit.cpp  lightCircuit.hpp
libstark/src/common/Algebra/: FiniteSetInterface.hpp  LinearSpace.cpp  LinearSpace.hpp  MultiVarPoly.cpp  MultiVarPoly.hpp  MultiVarPolyIddo.hpp
libstark/src/common/Utils/: ErrorHandling.cpp  ErrorHandling.hpp
libstark/src/languages/Acsp/: AcspInstance.hpp  AcspWitnessChecker.cpp  RationalConstraintsSys.hpp
libstark/src/languages/Bair/: BairInstance.hpp  BairWitness.hpp  BairWitnessChecker.cpp  ConstraintsSys.cpp  ConstraintsSys.hpp
libstark/src/protocols/: protocol.cpp  protocol.hpp
libstark/src/protocols/Ali/: prover.cpp  verifier.cpp  verifier.hpp
libstark/src/protocols/Ali/common_details/: common.cpp  common.hpp
libstark/src/protocols/Ali/verifier_details/: queriesGen.cpp
libstark/src/protocols/Fri/: prover.cpp  verifier.cpp  verifier.hpp
libstark/src/protocols/Fri/common/: common.cpp  common.hpp
libstark/src/protocols/Fri/verifier_details/: queryGenerator.cpp  queryGenerator.hpp
libstark/src/protocols/common/: proofs.cpp  proofs.hpp  verifier.cpp  verifier.hpp
libstark/src/protocols/common/CryptoCommitment/: MerkleCommitment.cpp  MerkleCommitment.hpp  aes_functions.cpp  simd-functions.cpp
libstark/src/reductions/BairToAcsp/: BairToAcsp.cpp
libstark/src/reductions/BairToAcsp/Details/: AcspRationalSystem.hpp  AcspSummandsPolynomial.cpp  AcspSummandsPolynomial.hpp  boundaryConstraints.hpp  commonDeffinitions.cpp  commonDeffinitions.hpp  commonMappings.cpp  commonMappings.hpp  constraintSystemsTestLocations.cpp  constraintSystemsTestLocations.hpp  constraints.cpp  instanceMappings.cpp  instanceMappings.hpp  neighborsConstructor.cpp  neighborsConstructor.hpp  spaces.cpp  spaces.hpp  witnessMappings.cpp  witnessMappings.hpp  witnessReduction.cpp
libstark/src/reductions/BairToAcsp/Routing/: BtrflyBasedPermutation.cpp  DeBruijnPermutationNet.cpp  LongDeBruijnPermutationNet.cpp  LongSymmetricDeBruijnNetwork.cpp  PermutationRoutingNet.hpp  SymmetricDeBruijnNetwork.cpp
tinyram/gadgetlib/: CMakeLists.txt
tinyram/gadgetlib/gadgetlib/: common_use.cpp  constraint.cpp  constraint.hpp  gadget.cpp  infrastructure.cpp  protoboard.cpp  protoboard.hpp
tinyram/gadgetlib/gadgetlib/SHA/: sha2.cpp  sha2.hpp
tinyram/gadgetlib/gadgetlib/examples/: tutorial.cpp
tinyram/gadgetlib/gadgetlib/tests/: gadget_UTEST.cpp
tinyram/stark-tinyram/: CMakeLists.txt
tinyram/stark-tinyram-tests/: ALU_UTEST.cpp  CMakeLists.txt  ConstraintsSystem2Bair_UTEST.cpp
tinyram/stark-tinyram/src/: main.cpp
tinyram/stark-tinyram/src/TinyRAM/: TinyRAMInstance.cpp  TinyRAMInstance.hpp
tinyram/stark-tinyram/src/TinyRAMtoBair/ConstraintSystemToBair/: cs2Bair.cpp  cs2Bair.hpp
tinyram/stark-tinyram/src/TinyRAMtoBair/RamToContraintSystem/: ALU.cpp
